objects/SDO_Service_Einstein_Agent_Helper__c.object
<CustomObject>
    <description>What: Einstein Agent Helper object used to simulate agent helpers. Who: Service team and Hanul Park.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>This rule is active and will apply recommendations</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comparator__c</fullName>
        <label>Comparator</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EQ</fullName>
                    <label>=</label>
                </value>
                <value>
                    <fullName>NOT_EQ</fullName>
                    <label>!=</label>
                </value>
                <value>
                    <fullName>LT</fullName>
                    <label>&lt;</label>
                </value>
                <value>
                    <fullName>LTE</fullName>
                    <label>&lt;=</label>
                </value>
                <value>
                    <fullName>GTE</fullName>
                    <label>&gt;=</label>
                </value>
                <value>
                    <fullName>GT</fullName>
                    <label>&gt;</label>
                </value>
                <value>
                    <fullName>STARTS</fullName>
                    <label>starts with</label>
                </value>
                <value>
                    <fullName>ENDS</fullName>
                    <label>ends with</label>
                </value>
                <value>
                    <fullName>CONTAINS</fullName>
                    <label>contains</label>
                </value>
                <value>
                    <fullName>IN</fullName>
                    <label>in</label>
                </value>
                <value>
                    <fullName>NOT_IN</fullName>
                    <label>not in</label>
                </value>
                <value>
                    <fullName>INCLUDES</fullName>
                    <label>includes</label>
                </value>
                <value>
                    <fullName>EXCLUDES</fullName>
                    <label>excludes</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Confidence__c</fullName>
        <inlineHelpText>Confidence level of Einstein ranging from 1-100. The highest confidence level will be applied as best option.</inlineHelpText>
        <label>Confidence</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Field__c</fullName>
        <inlineHelpText>Case field to be evaluated when created or updated. Must match the API name of the field (e.g. Name, CustomField__c, etc.).</inlineHelpText>
        <label>Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recommendation_Field__c</fullName>
        <inlineHelpText>Case field the recommendation will be applied to. Must match the API name of the field (e.g. Name, CustomField__c, etc.).</inlineHelpText>
        <label>Recommendation Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recommendation_Value__c</fullName>
        <inlineHelpText>Value of the recommendation. Checkboxes are set to true or false.</inlineHelpText>
        <label>Recommendation Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recommended_Article_Score__c</fullName>
        <defaultValue>50</defaultValue>
        <description>Provide a number between 1-100 to define the relevance score</description>
        <inlineHelpText>Provide a number between 1-100 to define the relevance score</inlineHelpText>
        <label>Recommended Article Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recommended_Article__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recommended Article</label>
        <referenceTo>Knowledge__kav</referenceTo>
        <relationshipLabel>Einstein Agent Helpers</relationshipLabel>
        <relationshipName>Einstein_Agent_Helpers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Einstein Agent Helper</label>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Field__c</columns>
        <columns>Comparator__c</columns>
        <columns>Value__c</columns>
        <columns>Recommendation_Field__c</columns>
        <columns>Recommendation_Value__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>EAH-{0000}</displayFormat>
        <label>Einstein Agent Helper Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Einstein Agent Helpers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>